02-dashboard-k8s/00-AllTheWay.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: traefik
  name: kubernetes-dashboard
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`dashk8s.demo.local`) && PathPrefix(`/`)
    middlewares:
    - name: redirectscheme
    priority: 0
    services:
    - kind: Service
      name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      port: 443
  tls:
    certResolver: letsencrypt
